arrumando(html, css e javacript)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="caixa-maior">
 
         <input class="input-cidade" placeholder="Digite o nome da cidade">
-        <button onclick="cliqueiNoBotao()">
+        <button type="button" onclick="cliqueiNoBotao()">
             <img class="lupa" src="https://www.svgrepo.com/show/488200/find.svg">
         </button>
 
